welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: '<-' expected but ')' found.
for (nbBaggle<=2) {
                ^Poucet:5: error: illegal start of simple expression
	}
        ^